action which parses multiple outputs

--- a/.github/workflows/multiple-outputs.yaml
+++ b/.github/workflows/multiple-outputs.yaml
@@ -5,12 +5,13 @@ on:
     branches:
       - main
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}-${{ github.event.number }}
+  cancel-in-progress: true
+
 jobs:
   check_pipelines:
     runs-on: ubuntu-latest
-    concurrency:
-      group: ${{ github.workflow }}
-      cancel-in-progress: true
     steps:
       - name: Checkout
         uses: actions/checkout@v3
